# Print-SoC

./: .gitignore  README.md  server.js
.github/workflows/: build-release.yml  test-build.yml
app/: .env.example  index.html  package-lock.json  package.json
app/src/: App.tsx  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  check-linux-deps.sh  entitlements.plist  installer.nsi  tauri.conf.json  tech.silan.VLDB-Toolkits.desktop  tech.silan.VLDB-Toolkits.metainfo.xml  tech.silan.VLDB-Toolkits.yml
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md  icon.icns
app/src-tauri/src/: lib.rs  main.rs  pdf_service.rs  print_service.rs  ssh_service.rs  storage_service.rs  types.rs
app/src/components/: ConnectionStatusBadge.tsx  LoadingAnimation.tsx  PageBreadcrumb.tsx  PrinterCardSkeleton.tsx  SSHKeyManager.tsx  app-sidebar.tsx  theme-toggle.tsx
app/src/data/: printers.ts
app/src/hooks/: useBackgroundMonitor.ts  useGeolocation.ts  useSSHConnection.ts
app/src/lib/: distance.ts  printer-api.ts  tauri-utils.ts
app/src/pages/: DebugPage.tsx  HelpPage.tsx  HomePage.tsx  JobsPage.tsx  LoginPage.tsx  ModernHomePageV2.tsx  ModernLoginPageV2.tsx  ModernPreviewPage.tsx  PreviewPage.tsx  PrintQueuePage.tsx  PrintersPage.tsx  SettingsPage.tsx
app/src/store/: printer-store.ts
app/src/styles/: globals.css
app/src/types/: printer.ts
docs/: tauri-drag-drop-permissions.md
release/node.js-npm/: package.json
release/node.js-npm/lib/: cli.js  config.js  downloader.js
(+13 files in other folders)
