[package]
name = "print_at_soc"
version = "0.1.0"
description = "Print_at_SoC - Smart Printing for NUS SoC"
authors = ["Silan Hu(silan.hu@u.nus.edu)"]
license = "MIT"
repository = "https://github.com/Qingbolan/nus-llama-printer"
edition = "2021"

[lib]
name = "print_at_soc_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
# SSH and async
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
# PDF processing
lopdf = "0.34"
# Additional utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
